完善了左右的div

--- a/网页作业/inter.html
+++ b/网页作业/inter.html
@@ -37,14 +37,8 @@
                 </a>
             </div>
         </div>
-        <div class="swiper_light">
-            <img class="white" src="./img/white-l.png" alt="左边白">
-            <img class="black" src="./img/black-l .png" alt="左边黑">
-        </div>
-        <div class="swiper_right">
-            <img class="white" src="./img/white-r.png" alt="右边白">
-            <img class="black" src="./img/black-r.png" alt="右边黑">
-        </div>
+        <div class="swiper_pre"><span><i class="fa fa-angle-left"><</i></span></div>
+        <div class="swiper_next"><span><i class="fa fa-angle-right">></i></span></div>
         <div class="swiper_dot">
             <ul>
                 <li></li>
