--- a/网页作业/inter.html
+++ b/网页作业/inter.html
@@ -26,13 +26,13 @@
                     <img src="./img/mummy_mask-teaser.png" alt="" id="">
                 </a>
             </div>
-            <div class="card" id="card">
+            <div class="card" id="2">
                 <a href="#">
                     <p><span>Desire,love and identity</span></p>
                     <img src="./img/Untitled.png" alt="" id="card">
                 </a>
             </div>
-            <div class="card" id="card">
+            <div class="card" id="3">
                 <a href="#">
                     <p><span>Animals</span></p>
                     <img src="./img/southwark cat (1).png" alt="">
