网站完整版1.0

--- a/网页作业/inter.html
+++ b/网页作业/inter.html
@@ -5,37 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css.css">
-    <script  type="text/javascript" src="./js.js"></script>
-    
-    </script>
     <title>Document</title>
 </head>
 <body>
     <div class="swiper">
         <div class="swiper_title">
             <h3>Explore the collection</h3>
-            <div class="more">
+            <div class="more">                               
                 <a href="#">See all</a>
                 <a href="#">></a>
             </div>
         </div>
         <div class="swiper_content">
-            <div class="card" id="1" >
-                <a href="#">
-                    <p><span>Egypt</span></p>
-                    <img src="./img/mummy_mask-teaser.png" alt="" id="">
-                </a>
+            <div class="card" >
+                <div class="right_box">
+                    <a href="#">
+                        <p><span>Egypt</span></p>
+                        <img src="./img/mummy_mask-teaser.png" alt="" id="">
+                    </a>
+                </div>
             </div>
-            <div class="card" id="2">
+            <div class="card" >
                 <a href="#">
                     <p><span>Desire,love and identity</span></p>
                     <img src="./img/Untitled.png" alt="" id="card">
                 </a>
             </div>
-            <div class="card" id="3">
+            <div class="card" >
                 <a href="#">
+                    <div class="left_box">
                     <p><span>Animals</span></p>
                     <img src="./img/southwark cat (1).png" alt="">
+                    </div>
                 </a>
             </div>
         </div>
@@ -50,7 +51,7 @@
             </ul>
         </div>
     </div>
- <script></script>
+
     
 </body>
 </html>
